--- a/templates/base.html
+++ b/templates/base.html
@@ -112,6 +112,9 @@
                 <button id="player-next" class="p-2 rounded-full bg-gray-100 dark:bg-gray-700 hover:bg-gray-200 dark:hover:bg-gray-600">
                     <i class="fas fa-step-forward text-xs"></i>
                 </button>
+                <button class="control-btn shuffle" onclick="toggleShuffle()"><i class="fas fa-random"></i></button>
+                <button class="control-btn repeat" onclick="toggleRepeat()"><i class="fas fa-redo"></i></button>
+
             </div>
             
             <div class="w-full md:w-1/4">
